# chatbot-task

./: .env.test  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: main.yml  test.yml
alembic/: env.py
alembic/versions/: 23722ef2d9a7_remove_unique_constraints_of_user_from_.py  42bf99b9c791_create_dropbox_token_table.py  6077cdae1296_make_user_id_of_dropbox_token_unique.py  834808374f57_create_indexed_resource_table.py  ae31ee7dd1d9_create_user_table.py  ce0b3f125573_add_expires_in.py  de9cbee3e64e_add_expires_in.py
scripts/: test.sh
src/: main.py
src/api/: __init__.py  deps.py
src/api/routers/: __init__.py  dropbox_index.py  dropbox_login.py  dropbox_resource.py  query.py  user.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/database/: __init__.py  base_session.py  session.py  vector_db.py
src/middleware/: error_handler.py
src/models/: __init__.py  base.py  dropbox_token.py  indexed_resource.py  mixin.py  user.py
src/schemas/: __init__.py  dropbox.py  query.py  user.py
src/service/: dropbox.py  dropbox_login.py  dropbox_resource.py  file_index.py  query.py  service.py  user.py  utils.py
src/service/dropbox/: __init__.py  handler.py  login.py  resource.py  resource_index.py  service.py
src/service/parser/: __init__.py  factory.py  parser.py  pdf_parser.py
tests/: __init__.py  conftest.py  database.py
tests/e2e/: __init__.py  test_user.py
tests/integration/service/: __init__.py  test_dropbox_login.py  test_dropbox_resource.py
tests/integration/service/dropbox/: __init__.py  test_service.py
tests/setup/: __init__.py  setup.py  teardown.py
tests/unit/core/: test_config.py
tests/unit/service/: test_dropbox_login.py  test_dropbox_resource.py  test_user.py  test_utils.py
tests/unit/service/dropbox/: __init__.py  test_dropbox_handler.py  test_service.py  (+1 more)
