[tool.poetry]
name = "chatbot-task"
version = "0.1.0"
description = ""
authors = ["Ali Kemal Yıldırım <akemalyildirim1@gmail.com>"]
readme = "README.md"
packages = [{include = "chatbot_task", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
